feat:fixed port switch dialog